--- a/startbootstrap-grayscale-1.0.2/startbootstrap-grayscale-1.0.2/index.html
+++ b/startbootstrap-grayscale-1.0.2/startbootstrap-grayscale-1.0.2/index.html
@@ -18,10 +18,11 @@
     <link href="css/grayscale.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+       <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
+    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script|Sacramento' rel='stylesheet' type='text/css'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -53,7 +54,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Save the Date</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Download</a>
@@ -74,8 +75,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Richard & Belinda</h1>
-                        <p class="intro-text">Save the Date</p>
+                        <div class="row">
+
+                        <h1 class="brand-heading col-md-1">Richard</h1>
+                            <div class="col-md-6"></div>
+                        <h1 class="brand-heading col-md-1">Belinda</h1>
+                        </div>
+                        <p class="intro-text">Are Getting Marrried</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -85,14 +91,29 @@
         </div>
     </header>
 
-    <!-- About Section -->
+    <!-- Save The Date Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Save the Date yay</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h1 class="header">Save the Date</h1>
+                <p class="Text">Save the Date Information</p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-6">
+                </div>
+
+        <div class="col-lg-6">
+            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false">
+            </script>
+            <div class="MapContainer">
+                <p class="header">Directions</p>
+                <div class="mapDiv" style="overflow:hidden;height:400px;width:500px;">
+                    <div  id="gmap_canvas" style="height:500px;width:600px;">
+                        <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+                        <script type="text/javascript"> function init_map(){var myOptions = {zoom:12,center:new google.maps.LatLng(-25.7822595,28.34216820000006),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(-25.7822595, 28.34216820000006)});infowindow = new google.maps.InfoWindow({content: "<div class=\"infoWindow\"><b>Diep in Die Berg</b><br/>929 Disselboom Avenue<br/> Pretoria</div>" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -153,7 +174,7 @@
     <script src="js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+ <!--   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFJ0KsrIF6oD3jElvf3ZIw8g4L2I9ItZU&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
