--- a/startbootstrap-grayscale-1.0.2/wedding/index.html
+++ b/startbootstrap-grayscale-1.0.2/wedding/index.html
@@ -33,6 +33,15 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.0";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container-fluid">
@@ -275,6 +284,8 @@
         <hr>
     </div>
     </div>
+    <div class="fb-comments" data-href="http://richandbellwedding.co.za/" data-width="500" data-numposts="5" data-colorscheme="light"></div>
+
 </section>
 
 <!-- jQuery -->
